@@ -1,0 +1,3 @@
+UPDATE {pre}_options SET options_value = '2011.4.4-GIT' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
+UPDATE {pre}_options SET options_value = '2014-03-22' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
+UPDATE {pre}_options SET options_value = '95' WHERE options_mod = 'clansphere' AND options_name = 'version_id';
